Fix video width on mobile

--- a/app/forum/static/css/naxos.css
+++ b/app/forum/static/css/naxos.css
@@ -181,3 +181,7 @@ div.legend {
 .panel-title {
     font-size: inherit;
 }
+/* Video */
+video {
+    width: 100%;
+}
